# axmzip

./: .gitignore  BUILD.md  LICENSE  PAPER.md  README.md  axmzip.py  index.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
