[package]
name    = "axmzip-core"
version = "0.5.0"
edition = "2021"
authors = ["Axmzip Contributors"]
description = "Axiom-based binary compression — core library"
license = "Apache-2.0"
repository = "https://github.com/yourusername/axmzip"

[dependencies]
md5 = "0.7"

[lib]
name = "axmzip_core"
crate-type = ["lib", "staticlib", "cdylib"]
