[package]
name    = "axmzip-gui"
version = "0.5.1"
edition = "2021"
authors = ["Axmzip Contributors"]
description = "Axmzip GUI — drag-and-drop compression"
license = "Apache-2.0"

[[bin]]
name = "axmzip-gui"
path = "src/main.rs"

[dependencies]
axmzip-core = { path = "../core" }
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
rfd  = "0.14"
# No "open" crate — we use std::process::Command directly (no extra dep)

[profile.release]
opt-level = 3
lto       = true
strip     = true
